# tree-ftp

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  docker-entrypoint.sh
.github/workflows/: build.yml
doc/: diagram.puml
src/: lib.rs  main.rs
src/fs/: directory.rs  file.rs  mod.rs  node.rs
src/ftp/: client.rs  command.rs  command_stream.rs  data_stream.rs  error.rs  mod.rs  reconnectable.rs  stream.rs
src/utils/: domain.rs  mod.rs  parser.rs  validator.rs
tests/: client.rs  directory.rs  file.rs  node.rs  validator.rs
